--- a/Web-Ui/src/app/credits/credits.component.html
+++ b/Web-Ui/src/app/credits/credits.component.html
@@ -7,19 +7,19 @@
       <div class="form-group form-group-sm">
         <label class="col-sm-2 control-label" for="name">Name</label>
         <div class="col-sm-10">
-          <input class="form-control" type="text" id="name" placeholder="Name">
+          <input class="form-control" type="text" id="name" #name placeholder="Name">
         </div>
       </div>
       <div class="form-group form-group-sm">
         <label class="col-sm-2 control-label" for="surname">Surname</label>
         <div class="col-sm-10">
-          <input class="form-control" type="text" id="surname" placeholder="Surname">
+          <input class="form-control" type="text" id="surname" #surname placeholder="Surname">
         </div>
       </div>
       <div class="form-group form-group-sm">
         <label class="col-sm-2 control-label" for="pesel">Pesel</label>
         <div class="col-sm-10">
-          <input class="form-control" type="text" id="pesel" placeholder="Pesel">
+          <input class="form-control" type="text" id="pesel" #pesel placeholder="Pesel">
         </div>
       </div>
     </form>
@@ -29,13 +29,13 @@
       <div class="form-group form-group-sm">
         <label class="col-sm-2 control-label" for="productName">Name</label>
         <div class="col-sm-10">
-          <input class="form-control" type="text" id="productName" placeholder="Product Name">
+          <input class="form-control" type="text" id="productName" #productName placeholder="Product Name">
         </div>
       </div>
       <div class="form-group form-group-sm">
         <label class="col-sm-2 control-label" for="productValue">Value</label>
         <div class="col-sm-10">
-          <input class="form-control" type="text" id="productValue" placeholder="Product Value">
+          <input class="form-control" type="text" id="productValue" #productValue placeholder="Product Value">
         </div>
       </div>
     </form>
@@ -46,12 +46,14 @@
         <label class="col-sm-2 control-label" for="creditName">Name</label>
         <div class="col-sm-10">
           <select
+            (change)="selectChangeHandler($event)"
             id="creditName"
-            class="form-control">
-            <option value="online">Consumer Loan</option>
-            <option value="offline">Investment Loan</option>
-            <option value="offline">Consolidation Loan</option>
-            <option value="offline"> Mortgage Loan</option>
+            class="form-control"
+          >
+            <option value="Consumer Loan">Consumer Loan</option>
+            <option value="Investment Loan">Investment Loan</option>
+            <option value="Consolidation Loan">Consolidation Loan</option>
+            <option value="Mortgage Loan"> Mortgage Loan</option>
           </select>
         </div>
       </div>
@@ -61,11 +63,18 @@
 <div class="row">
   <div class="container">
     <button
-      class="btn btn-sm btn-primary button-width" style="alignment: left">Submit information about the loan
+      class="btn btn-sm btn-primary button-width" style="alignment: left"
+      (click)="onSubmitNewCredit(name.value, surname.value,pesel.value, productName.value, productValue.value)">Submit information about the loan
     </button>
-    <button
+    <button *ngIf="!isRequiredTable"
       class="btn btn-sm btn-primary button-width " style="alignment: right"
       (click)="onGetCreditsInformation()">Get information about all loans
     </button>
+    <button *ngIf="isRequiredTable"
+            class="btn btn-sm btn-primary button-width " style="alignment: right"
+            (click)="onGetCreditsInformation()">Hide Table
+    </button>
   </div>
 </div>
+<app-credits-table *ngIf="isRequiredTable"
+                   [credits]="credits"></app-credits-table>
